--- a/package.json
+++ b/package.json
@@ -6,16 +6,15 @@
     "async": "2.1.4",
     "cors": "^2.8.5",
     "dotenv": "4.0.0",
-    "keystone": "4.0.0-beta.5",
+    "keystone": "^4.0.0",
     "lodash": "^4.13.1",
-    "node-sass": "4.5.0",
-    "node-sass-middleware": "0.11.0",
     "pug": "2.0.0-beta11"
   },
   "devDependencies": {
     "eslint": "3.15.0",
     "eslint-config-keystone": "3.0.0",
     "eslint-plugin-react": "^5.1.1",
+    "node-sass-middleware": "^0.11.0",
     "nodemon": "^1.18.9"
   },
   "scripts": {
