--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "keystone": "4.0.0-beta.5",
-    "lodash": "^4.13.1",
-    "pug": "2.0.0-beta11",
+    "async": "2.1.4",
     "dotenv": "4.0.0",
-    "keystone-email": "1.0.5",
-    "async": "2.1.4"
+    "keystone": "^4.0.0",
+    "keystone-email": "^1.1.0",
+    "lodash": "^4.13.1",
+    "nodemon": "^1.18.9",
+    "pug": "2.0.0-beta11"
   },
   "devDependencies": {
     "eslint": "3.15.0",
@@ -17,6 +18,6 @@
   },
   "scripts": {
     "lint": "eslint .",
-    "start": "node keystone.js"
+    "start": "nodemon keystone.js"
   }
 }
